<resources>
    <!--
   * DatingApp
    * https://github.com/quintuslabs/DatingApp
    * Created on 25-sept-2018.
    * Created by : Santosh Kumar Dash:- http://santoshdash.epizy.com
    -->
    <string name="app_name">Renting House</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Firebase database fields -->
    <string name="dbfemale">female</string>
    <string name="dbmale">male</string>
    <string name="title_activity_check_profile_before_matched">activity_checkProfileBeforeMatched
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="match_notification">Match Notification</string>
    <string name="ok">ok</string>
    <string name="permission_camera_rationale">Request for camera permission</string>
    <string name="permission_contacts_rationale">GALLERY PERMISSION</string>
    <string name="permision_available_camera">camera available</string>
    <string name="host">Host</string>
    <string name="tenant">Tenant</string>
    <string name="entry_your_email">entry your Email</string>
    <string name="enter_your_username">enter your username</string>
    <string name="enter_your_password">enter your Password</string>
    <string name="no_descriptiion">No Descriptiion</string>

    <!-- introduction pictures-->
    <integer-array name="img_id_arr">
        <item>@drawable/img1</item>
        <item>@drawable/img2</item>
        <item>@drawable/img3</item>
        <item>@drawable/img4</item>
    </integer-array>
    <string-array name="districts">
        <item>Quan 1</item>
        <item>Quan 2</item>
        <item>Quan 3</item>
        <item>Quan 4</item>
        <item>Quan 5</item>
        <item>Quan 6</item>
        <item>Quan 7</item>
        <item>Quan 8</item>
        <item>Quan 9</item>
        <item>Quan 10</item>
        <item>Quan 11</item>
        <item>Quan 12</item>
        <item>Quan Binh Thanh</item>
        <item>Quan Phu Nhuan</item>
        <item>Quan Go Vap</item>
        <item>Quan Tan Binh</item>
        <item>Quan Tan Phu</item>
        <item>Quan Binh Tan</item>
        <item>Quan Thu Đuc</item>
        <item>Quan Binh Chanh</item>
        <item>Quan Nha Be</item>
        <item>Quan Can Gio</item>
        <item>Quan Hoc Mon</item>
        <item>Quan Cu Chi</item>
    </string-array>

</resources>
