<?xml version="1.0" encoding="utf-8"?>
<!--
   * DatingApp
    * https://github.com/quintuslabs/DatingApp
    * Created on 25-sept-2018.
    * Created by : Santosh Kumar Dash:- http://santoshdash.epizy.com
    -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/numberOfPagesLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="24dp"
        android:gravity="right"
        android:text="2/5"
        android:textColor="#747474"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="-1dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/app_name"
            android:textColor="#ff0b00"
            android:gravity="center"
            android:textSize="30dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/getStartedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="20dp"
            android:text="Which is your role ?"
            android:textColor="#747474"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/hostSelectionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="#ff4081"
                android:elevation="24dp"
                android:text="@string/host"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tenantSelectionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:background="#ff4081"
                android:elevation="24dp"
                android:text="@string/tenant"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/genderContinueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:background="#ff4081"
            android:backgroundTint="#ff4081"
            android:elevation="24dp"
            android:text="Continue"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
